# Meridian-Training-Operations

./: metadata.json
repo/backend/: .env.example  .gitignore  Dockerfile  celery-entrypoint.sh  docker-entrypoint.sh  pyproject.toml  requirements.txt
repo/backend/alembic/: alembic.ini  env.py
repo/backend/alembic/versions/: 0001_initial_schema.py  0002_session_recordings_multi.py  0003_session_title.py  0004_enum_values_and_policy.py  0005_prd_enum_alignment.py  0006_security_hardening.py  0007_search_export_jobs.py
repo/backend/app/: main.py
repo/backend/app/core/: audit.py  config.py  database.py  deps.py  encryption.py  exceptions.py  logging.py  masking.py  pagination.py  security.py  storage.py
repo/backend/tests/: conftest.py
repo/backend/tests/api/: test_attendance.py  test_audit_logs.py  test_auth.py  test_auth_extended.py  test_authorization.py  test_booking_non_bookable_session.py  test_bookings_extended.py  test_checkout.py  test_checkout_orders.py  test_courses.py  test_e2e_user_journeys.py  test_explicit_coverage.py  test_framework.py  test_ingestion.py  test_ingestion_extended.py  test_instructors.py  test_jobs.py  test_locations_rooms.py  test_monitoring.py  test_monitoring_extended.py  test_payments.py  test_payments_extended.py  test_policy.py  test_promotions.py  test_refund_lifecycle.py  test_replays.py  test_replays_extended.py  test_search.py  test_sessions.py  test_sessions_extended.py  test_users.py  test_websocket_admission.py
repo/backend/tests/unit/: test_attendance_models.py  test_audit_chain.py  test_auth_service.py  (+19 more)
(+228 files in other folders)
